# fodeen-ontology-agents

./: Dockerfile  LICENSE  Makefile  QUICKSTART.md  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
agents/: __init__.py
agents/conformance/: __init__.py  main.py
agents/inventory/: __init__.py  main.py
agents/mapping/: __init__.py  main.py
agents/ontology/: __init__.py  main.py
agents/reranking/: __init__.py  main.py
agents/uom/: __init__.py  main.py
data/golden/: sample_nodes.jsonl
data/releases/: attribute_dictionary.json  ontology_v1.schema.json
docs/adrs/: 001-monorepo-architecture.md  002-agent-based-architecture.md  003-postgresql-pgvector.md  004-testing-strategy.md
scripts/: init-db.sql
shared/: __init__.py
shared/contracts/: __init__.py
shared/schemas/: __init__.py  base.py
shared/utils/: database.py  logging.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py
tests/unit/: test_mapping_agent.py  test_ontology_agent.py  test_shared_schemas.py
